--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<form action="/enrollment" method="post" class="navbar-form navbar-left" role="search">
+<form action="/enrollment" method="post" class="navbar-form navbar-left" enctype="multipart/form-data" role="search">
   <div class="form-group">
       <label>제목</label>
       <input type="text" name="title" class="form-control" placeholder="제목을 입력하세요">
@@ -6,6 +6,11 @@
   <div class="form-group">
       <label>내용</label>
       <input type="text" name="content" class="form-control" placeholder="내용을 입력하세요">
+  </div>
+  <div class="form-group">
+      <label>내용</label>
+      <input type="file" name="image" class="form-control" placeholder="내용을 입력하세요">
+      
   </div>  
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
