이미지 파일 형식으로 저장

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,3 +14,9 @@
   </div>  
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
+
+<% @post.each do |p| %>
+  <%= p.title %>
+  <%= p.content %>
+  <%= image_tag(p.img_url) %>
+<% end %>
